chore(richtext-lexical): fixed & inline toolbar: adjust z-index

--- a/packages/richtext-lexical/src/field/features/toolbars/inline/Toolbar/index.scss
+++ b/packages/richtext-lexical/src/field/features/toolbars/inline/Toolbar/index.scss
@@ -15,7 +15,7 @@ html[data-theme='light'] {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1;
   opacity: 0;
   border-radius: 6.25px;
   transition: opacity 0.2s;
